--- a/index.html
+++ b/index.html
@@ -1,49 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="index.css" />
     <title>Furniture Emporium</title>
   </head>
   <body>
     <main>
       <header>
-        <h1>Furniture Emporium</h1>
-        <p>
+          <h1 class="intro5">Furniture Emporium</h1>
+        <p class="intro2">
           Browse our collection of bespoke furniture to find the next piece to
           bring home.
         </p>
       </header>
       <article>
-        <h2>Ergonomic Couch</h2>
-        <p>
+        <div class="intro">
+          <h2>Ergonomic Couch</h2>
+        <p class="intro3">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
           delectus iusto corporis id, quo cumque, perferendis consequatur
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
         <p>$20.00 <s>$25.00</s></p>
-        <button>Add to cart</button>
+        <button class="intro4">Add to cart</button>
       </article>
       <article>
-        <h2>Frozen Table</h2>
-        <p>
+        <div class="intro">
+          <h2>Frozen Table</h2>
+        <p class="intro3">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
           delectus iusto corporis id, quo cumque, perferendis consequatur
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
         <p>$49.95 <s>$60.00</s></p>
-        <button>Add to cart</button>
+        <button class="intro4">Add to cart</button>
       </article>
       <article>
-        <h2>Handcrafted Chair</h2>
-        <p>
+        <div class="intro">
+          <h2>Handcrafted Chair</h2>
+        <p class="intro3">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
           delectus iusto corporis id, quo cumque, perferendis consequatur
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
         <p>$18.99 <s>$32.99</s></p>
-        <button>Add to cart</button>
+        <button class="intro4">Add to cart</button>
       </article>
     </main>
   </body>
